src/keyboard.css
#keyboardContainer {
    position: absolute;
    box-sizing: border-box;
    bottom: 0;
    width: 100%;

    padding: 24px;

    transition: transform 1s;
}

@media (min-width: 512px) {
    #keyboardContainer {
        transform: translateY(100%);
    }
}

.key {
    background-color: lightgray;
    padding: 0px 5px;

    height: 42px;

    border: none;
    border-radius: 4px;

    font-family: monospace;
    font-weight: bold;

    font-size: 32px;

    cursor: pointer;
    user-select: none;

    transition: filter 0.15s;
}

.key:hover {
    filter: brightness(1.2);
}

.key:active {
    filter: brightness(0.8);
}

